Created PageDTO for common page elements and created also CategoryPageDTO to return categories for admin page in pages. Updated QuestionPageDTO to extend PageDTO